-- Schema del database H2 per la Piattaforma di Gestione e Condivisione
-- di Materiale Didattico.
--
-- Strategia adottata per la generalizzazione Utente/Docente/Studente:
-- "una sola tabella per tutta la gerarchia" (vedi 16_BCED_temp_1.pdf,
-- Soluzione 3), con colonna discriminatrice TIPO. Scelta per la sua
-- semplicita' realizzativa, adeguata alla dimensione del progetto.

CREATE TABLE IF NOT EXISTS UTENTE (
    ID                   INT AUTO_INCREMENT PRIMARY KEY,
    NOME                 VARCHAR(100) NOT NULL,
    COGNOME              VARCHAR(100) NOT NULL,
    EMAIL_ISTITUZIONALE  VARCHAR(150) NOT NULL UNIQUE,
    USERNAME             VARCHAR(50)  NOT NULL UNIQUE,
    PASSWORD             VARCHAR(255) NOT NULL,
    TIPO                 VARCHAR(10)  NOT NULL CHECK (TIPO IN ('DOCENTE', 'STUDENTE'))
);

CREATE TABLE IF NOT EXISTS CORSO (
    ID               INT AUTO_INCREMENT PRIMARY KEY,
    TITOLO           VARCHAR(150) NOT NULL,
    DESCRIZIONE      VARCHAR(1000) NOT NULL,
    CODICE_UNIVOCO   VARCHAR(20)  NOT NULL UNIQUE,
    ANNO_ACCADEMICO  VARCHAR(9)   NOT NULL,
    DOCENTE_ID       INT          NOT NULL,
    CONSTRAINT FK_CORSO_DOCENTE FOREIGN KEY (DOCENTE_ID) REFERENCES UTENTE (ID)
);

CREATE TABLE IF NOT EXISTS SEZIONE (
    ID        INT AUTO_INCREMENT PRIMARY KEY,
    TITOLO    VARCHAR(150) NOT NULL,
    CORSO_ID  INT          NOT NULL,
    CONSTRAINT FK_SEZIONE_CORSO FOREIGN KEY (CORSO_ID) REFERENCES CORSO (ID)
);

CREATE TABLE IF NOT EXISTS CONTENUTO (
    ID                  INT AUTO_INCREMENT PRIMARY KEY,
    TITOLO              VARCHAR(150) NOT NULL,
    DESCRIZIONE         VARCHAR(2000) NOT NULL,
    CATEGORIA           VARCHAR(30)  NOT NULL CHECK (CATEGORIA IN
                         ('SLIDE','DISPENSE','ESERCIZI','SOLUZIONI','AVVISI','MATERIALE_INTEGRATIVO')),
    DATA_PUBBLICAZIONE  DATE         NOT NULL,
    PUBBLICATO          BOOLEAN      NOT NULL DEFAULT FALSE,
    CORSO_ID            INT          NOT NULL,
    SEZIONE_ID          INT,
    CONSTRAINT FK_CONTENUTO_CORSO   FOREIGN KEY (CORSO_ID)   REFERENCES CORSO (ID),
    CONSTRAINT FK_CONTENUTO_SEZIONE FOREIGN KEY (SEZIONE_ID) REFERENCES SEZIONE (ID)
);

-- Classe associativa reificata: relazione molti-a-molti Studente<->Corso
-- con attributo proprio (dataIscrizione), tradotta come tabella associativa.
CREATE TABLE IF NOT EXISTS ISCRIZIONE (
    ID               INT AUTO_INCREMENT PRIMARY KEY,
    STUDENTE_ID      INT  NOT NULL,
    CORSO_ID         INT  NOT NULL,
    DATA_ISCRIZIONE  DATE NOT NULL,
    CONSTRAINT FK_ISCRIZIONE_STUDENTE FOREIGN KEY (STUDENTE_ID) REFERENCES UTENTE (ID),
    CONSTRAINT FK_ISCRIZIONE_CORSO    FOREIGN KEY (CORSO_ID)    REFERENCES CORSO (ID),
    CONSTRAINT UQ_ISCRIZIONE UNIQUE (STUDENTE_ID, CORSO_ID)
);

CREATE TABLE IF NOT EXISTS NOTIFICA (
    ID                INT AUTO_INCREMENT PRIMARY KEY,
    MESSAGGIO         VARCHAR(500) NOT NULL,
    DATA              DATE         NOT NULL,
    LETTA             BOOLEAN      NOT NULL DEFAULT FALSE,
    DESTINATARIO_ID   INT          NOT NULL,
    CONTENUTO_ID      INT          NOT NULL,
    CONSTRAINT FK_NOTIFICA_DESTINATARIO FOREIGN KEY (DESTINATARIO_ID) REFERENCES UTENTE (ID),
    CONSTRAINT FK_NOTIFICA_CONTENUTO    FOREIGN KEY (CONTENUTO_ID)    REFERENCES 