erDiagram
    UTENTE {
        int id PK
        string nome
        string cognome
        string emailIstituzionale
        string username
        string password
        string tipo
    }
    CORSO {
        int id PK
        string titolo
        string descrizione
        string codiceUnivoco
        string annoAccademico
        int docenteId FK
    }
    SEZIONE {
        int id PK
        string titolo
        int corsoId FK
    }
    CONTENUTO {
        int id PK
        string titolo
        string descrizione
        string categoria
        date dataPubblicazione
        boolean pubblicato
        int corsoId FK
        int sezioneId FK
    }
    ISCRIZIONE {
        int id PK
        int studenteId FK
        int corsoId FK
        date dataIscrizione
    }
    NOTIFICA {
        int id PK
        string messaggio
        date data
        boolean letta
        int destinatarioId FK
        int contenutoId FK
    }

    UTENTE ||--o{ CORSO : "e' titolare di"
    CORSO ||--o{ SEZIONE : "organizza"
    CORSO ||--o{ CONTENUTO : "contiene"
    SEZIONE |o--o{ CONTENUTO : "raggruppa"
    UTENTE ||--o{ ISCRIZIONE : "si iscrive tramite"
    CORSO ||--o{ ISCRIZIONE : "riceve"
    UTENTE ||--o{ NOTIFICA : "riceve"
    CONTENUTO ||--o{ NOTIFICA : "genera"
